<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".DisplayActivity">

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="411dp"
        android:layout_height="84dp"
        android:text="@string/validacion_de_los_datos"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="370dp"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvDatosAlmacenados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp" />
    </ScrollView>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar" />
</LinearLayout>